--- a/website.html
+++ b/website.html
@@ -5,14 +5,10 @@
 		<title> Forge Launch Countdown</title>
 	</head>
 	<body>
-		<h1>Welcome to Countdown</h1>
-		<h6>We're excited to work with you!</h6>
-		<p>Launch will teach:</p>
-		<ul>
-			<li>HTML</li>
-			<li>CSS</li>
-			<li>JS</li>
-			<li>React</li>
-		</ul>
+		<h1> ME and Myself</h1>
+		<p>My name is Ashwin Shankar. I'm from Pittsburgh, PA. In my free time I lvoe to golf, hang out with friends and play video games.
+			I go to UVA!:</p>
+			<img src>= "Headshot.jpg" width = "300px" alt="Headshot"/> 
+		
 	</body>
 </html>
