--- a/website.html
+++ b/website.html
@@ -8,7 +8,10 @@
 		<h1> ME and Myself</h1>
 		<p>My name is Ashwin Shankar. I'm from Pittsburgh, PA. In my free time I lvoe to golf, hang out with friends and play video games.
 			I go to UVA!:</p>
-			<img src>= "Headshot.jpg" width = "300px" alt="Headshot"/> 
+		<img src>= "/Countdown1/Headshot.JPG" alt="Headshot"/> </img>
+		<a href="https://joinforge.co/"
+		target ="_blank"> Forge's Website </a>
+
 		
 	</body>
 </html>
